# NYCU-Data-Science-2024

./: .gitignore  README.md  pyproject.toml  requirements.txt
HW1/: .gitignore  README.md  check.txt  lab.ipynb  output.json  sample.html
HW1/Part1/: 109511276.py  articles.jsonl  binrary.ipynb  keyword_0101_0304_sp.json  popular_0101_0120.json  popular_articles.jsonl  push_0101_0101.json  push_0304_0315.json
HW1/Part2/: CrawlerData.py  CrawlerHW.py  Model.py  ModelHW.py  Note.md  add_back_image.py  build_test_case.py  check_data_set.ipynb  lab.ipynb  (+11 more)
HW2/: .gitignore  README.md  TextGenerator.py  get_dataset.ipynb  handle_csv.ipynb  main.py  mixtral-8x7b-32768_ans.csv  prompt.txt  requirements.txt  submit_true.csv  super_ans.ipynb  testing.csv  tmp.jsonl  true_table_of_sample.csv
HW3/: .gitignore  109511276.sh  109511276_2.json  README.md  playground.ipynb  predition_in_data.ipynb  run_pre_train.ipynb  some_thing_model.ipynb  summit_predition.ipynb  use_hugging_face.ipynb  use_hugging_face_t5_large.ipynb
HW4/: .gitignore  Data_Science_HW4_Tutorial.ipynb  HW4_109511276_練鈞揚.md  README.md  TALib.py  fixed_output.ipynb  full_model_sample_submission.csv  main.ipynb  make_bester.ipynb  make_bester_128.ipynb  node.md  pruned_model_0.25_day_5_4.csv  pruned_model_0.26_day_5_9_max_64_beam_5.csv  pruned_model_0.26_max_128_beam_10_gen_super.csv  report.md  test_code_sample.ipynb  try_nni_pruning_3.ipynb  try_pruning_torch.ipynb  try_pruning_torch_best.ipynb  try_torch_pruning.ipynb
HW5/: .gitignore  README.md  Solver.py  TALib.py  Trainer.py  config.py  create_submission.py  note.md  todo.md
HW6/: .gitignore  README.md  evaluate.py  loss.py  pyproject.toml  test.sh  train.py  train.sh
HW6/dataset/: create_dataset.py
(+81 files in other folders)
