[tool.poetry]
name = "nycu-data-science-2024"
version = "0.1.0"
description = ""
authors = ["KeithLin724 <keithlin724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
datasets = "^2.18.0"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
g4f = "^0.2.5.4"
black = "^24.3.0"
click = "^8.1.7"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
