[tool.poetry]
name = "hw6"
version = "0.1.0"
description = ""
authors = ["KeithLin724 <keithlin724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
torchvision = "^0.18.1"
albumentations = "^1.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
