[tool.poetry]
name = "hw6"
version = "0.1.0"
description = ""
authors = ["KeithLin724 <keithlin724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
aim = "^3.20.1"
torch = "^2.3.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
torchvision = "^0.18.1"
albumentations = "^1.4.8"
black = "^24.4.2"
rich = "^13.7.1"
loguru = "^0.7.2"
opencv-python = "^4.10.0.82"
scikit-learn = "^1.5.0"
tabulate = "^0.9.0"
yacs = "^0.1.8"
colorama = "^0.4.6"
segments-ai = "^1.8.2"
accelerate = "^0.31.0"
gdown = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
